# syros

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  build.rs  docker-compose.yml  rust-toolchain.toml
.github/workflows/: benchmarks.yml  ci.yml  docs.yml  publish.yml  quality.yml  release.yml
benches/: cache_benchmarks.rs  event_benchmarks.rs  lock_benchmarks.rs  saga_benchmarks.rs
config/: default.toml
docs/: README.md  architecture.md  configuration.md  faq.md  getting-started.md  rest-api.md
examples/: README.md  cli-demo.md  test-all-apis.py  test-auth.py  test-client.py  test-complete-apis.py  test-metrics.py  test-new-apis.py
examples/basic/simple-lock/python/: README.md  main.py  requirements.txt
examples/real-world/ecommerce/python/: README.md  main.py
helm/syros-platform/: Chart.yaml  README.md  values.yaml
helm/syros-platform/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
migrations/: 20240101000000_init_schema.sql
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: syros-dashboard.json
monitoring/prometheus/: prometheus.yml
proto/: syros.proto
scripts/: README.md  publish-all.sh  publish-csharp.sh  publish-go.sh  publish-java.sh  publish-nodejs.sh  publish-python.sh  setup.ps1  setup.sh
sdks/csharp/: README.md
sdks/csharp/SyrosSDK/: Example.cs  SyrosClient.cs  SyrosSDK.csproj
sdks/go/: .goreleaser.yml  README.md  example.go  go.mod  syros_client.go
sdks/java/: README.md  pom.xml
sdks/java/src/main/java/com/syros/: Example.java  SyrosClient.java
sdks/nodejs/: README.md  package.json  syros-sdk.js
sdks/python/: README.md  pyproject.toml  requirements.txt  setup.py  syros_sdk.py
src/: cli.rs  config.rs  errors.rs  lib.rs  main.rs  metrics.rs  server.rs
src/api/: grpc.rs  mod.rs  rest.rs  websocket.rs
src/api/graphql/: mod.rs  mutations.rs  playground.html  queries.rs  schema.rs  types.rs
src/api/handlers/: auth_handlers.rs  basic_handlers.rs  cache_handlers.rs  event_handlers.rs  health_handlers.rs  lock_handlers.rs  metrics_handlers.rs  mod.rs  rbac_handlers.rs  saga_handlers.rs  simple_handlers.rs
src/auth/: api_keys.rs  jwt.rs  middleware.rs  mod.rs  rbac.rs
src/core/: cache_manager.rs  event_store.rs  lock_manager.rs  mod.rs  saga_orchestrator.rs  service_discovery.rs
src/storage/: postgres.rs  redis.rs
tests/: integration_test.rs  mock_server.rs
