[package]
name = "syros"
version = "1.0.0"
edition = "2021"
authors = ["Jackson Sá <jacksonwendel@gmail.com>"]
description = "Syros - Distributed Coordination Service"
license = "MIT"
repository = "https://github.com/wendelmax/syros"
keywords = ["distributed-systems", "coordination", "locks", "sagas", "events"]
categories = ["asynchronous", "web-programming", "api-bindings", "development-tools"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros", "multipart", "ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database and storage
redis = { version = "0.23", features = ["tokio-comp"] }
postgres = { version = "0.19", features = ["with-uuid-1", "with-serde_json-1"] }
# etcd-rs = "1.0"  # Requires protoc installation

# Service Discovery
consul = "0.4"
reqwest = { version = "0.11", features = ["json"] }

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# GraphQL
async-graphql = { version = "6.0", features = ["chrono", "uuid"] }

# gRPC - Usando Volo (sem dependência do protoc)
volo = "0.11"
volo-grpc = "0.11"
volo-build = "0.11"

# WebSocket
tokio-tungstenite = "0.21"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.21"
opentelemetry = { version = "0.21", features = ["trace", "metrics"] }
opentelemetry-jaeger = "0.21"

# Metrics
prometheus = "0.13"


# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }
toml = "0.8"

# Security
jsonwebtoken = "9.0"
sha2 = "0.10"
hmac = "0.12"

# Compression
flate2 = "1.0"

# Random number generation
fastrand = "2.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }

# Rate limiting
governor = "0.6"

# Health checks
tower_governor = "0.6"

[dev-dependencies]
tokio-test = "0.4"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
futures = "0.3"

[build-dependencies]
volo-build = "0.11"


[[bin]]
name = "syros-platform"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
